# Kova

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  TRANSLATING.md  flake.nix  index.html  md.kova.Kova.yml  package-lock.json  package.json  renovate.json  test-export.md  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: fix-latest-json.yml  linux-test-build.yml  nix-build.yml  nix-hash-sync.yml  publish-repos.yml  release.yml  test-attestation.yml  update-flathub.yml
docs/superpowers/plans/: 2026-06-20-marp-import.md
docs/superpowers/specs/: 2026-06-20-marp-import-design.md
flatpak/: cargo-sources.json  kova.sh  md.kova.Kova.desktop  md.kova.Kova.metainfo.xml  node-sources.json
infra/: docker-compose.yml
infra/deb-repo/: nginx.conf
infra/services/: docker-compose.yml
infra/services/flatpak-repo/: nginx.conf
infra/services/rpm-repo/: nginx.conf
infra/services/themes/: nginx.conf
infra/traefik/: .gitignore  docker-compose.yml  traefik.yml
packaging/arch/kova-bin/: PKGBUILD
packaging/flatpak/: md.kova.app.metainfo.xml  md.kova.app.yml
packaging/nix/: update-npm-hash.sh
scripts/: bump-version.mjs  generate-flatpak-sources.sh  generate-icons.sh
src/: App.tsx  AudienceApp.tsx  macMenu.ts  main.tsx  version.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  installer-hooks.nsh  kova.desktop  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_io.rs  lib.rs  main.rs  watcher.rs
src/components/: ErrorBoundary.tsx  ImportPptxModal.tsx  ImportUrlModal.tsx  InfoBanner.tsx  MissingThemeBanner.tsx  SettingsModal.tsx
src/components/editor/: EditorContextMenu.tsx  slideDivider.ts
src/components/inspector/: ColorControls.tsx  FontControls.tsx  FormatControls.tsx  LogoControls.tsx  ThemeLibraryModal.tsx  ThemeMarketplaceModal.tsx
src/components/layout/: EditorPanel.tsx  InspectorPanel.tsx  StatusBar.tsx  ThumbnailPanel.tsx
src/components/layout/__tests__/: buildMediaSnippet.test.ts
src/components/presentation/: PresentationOverlay.css  PresentationOverlay.tsx  PresenterOverlay.css  PresenterOverlay.tsx
src/components/preview/: SlideRenderer.css  SlideRenderer.tsx
src/engine/: bundledFonts.ts  fontDetect.ts  keybindings.ts  resolvePath.ts  theme.ts  types.ts  updateCheck.ts  updater.ts
src/engine/__tests__/: bundledFonts.test.ts  fontDetect.test.ts  frontmatter.test.ts  keybindings.test.ts  layout.test.ts  mermaidExportTheme.test.ts  parser.test.ts  parserLayoutIntegration.test.ts  registerCachedFont.test.ts  resolvePath.test.ts  speakerNotes.test.ts  spellCheckExtension.test.ts  spellChecker.test.ts  theme.test.ts  types.test.ts
src/engine/export/: exportPdf.ts  exportPdfNative.ts  exportPptx.ts  mermaidExportTheme.ts  mermaidRenderQueue.ts  mermaidSvgCache.ts  pdfLayout.ts  svgToPng.ts
src/engine/export/__tests__/: pdfLayout.test.ts
src/engine/import/: marp.ts  parsePptx.ts  pptxToMarkdown.ts
src/engine/import/__tests__/: marp.test.ts  pptxToMarkdown.test.ts
src/engine/layout/: autoLayout.ts
src/engine/layout/__tests__/: autoLayout.test.ts
src/engine/parser/: markdownToSlides.ts
src/engine/spellcheck/: spellCheckExtension.ts  spellChecker.ts
src/i18n/: context.tsx  date.ts  en.ts  index.ts  locales.ts  translate.ts  types.ts
src/i18n/__tests__/: translate.test.ts
src/i18n/locales/: de.ts  sl.ts
src/store/: lastSession.ts  recentFiles.ts  settings.ts
src/store/__tests__/: recentFiles.test.ts
src/styles/: editor.css  global.css
src/types/: typo-js.d.ts
