[package]
name = "kova"
version = "0.2.6"
description = "Markdown presentation authoring tool"
authors = ["Kova contributors"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name conflict with the binary crate on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "kova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
base64 = "0.22"
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = [] }
gdk = { version = "0.18", features = [] }

