[package]
name = "kova"
version = "0.3.3"
description = "Markdown presentation authoring tool"
authors = ["Kova contributors"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name conflict with the binary crate on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "kova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
flatpak = []
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = [] }
gdk = { version = "0.18", features = [] }
gio = "0.18"

