[package]
name = "kova"
version = "0.6.9"
description = "Markdown presentation authoring tool"
authors = ["Kova contributors"]
edition = "2021"

[lib]
# The `_lib` suffix avoids a name conflict with the binary crate on Windows.
# See https://github.com/rust-lang/cargo/issues/8519
name = "kova_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
# Hide the native window title text under titleBarStyle: Overlay (setTitle("")
# doesn't clear it). Versions match what tauri already pulls in transitively.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
# Native PDF export via WKWebView.createPDFWithConfiguration:completionHandler:
objc2-web-kit = { version = "0.3", features = ["WKWebView", "WKPDFConfiguration"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSError", "NSGeometry"] }
block2 = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
# Native PDF export via ICoreWebView2_7::PrintToPdf. Versions are pinned to what
# Tauri/wry already pull in transitively so the lockfile doesn't change.
webview2-com = "0.38"
windows = { version = "0.61", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = [] }
gdk = { version = "0.18", features = [] }
gio = "0.18"
# Native PDF export via WebKitPrintOperation. Pinned to what wry already pulls in.
webkit2gtk = "=2.0.2"

